<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.alexsukharev.carouselltopics.viewmodel.MainViewModel"/>

        <variable
            name="topic"
            type="com.alexsukharev.carouselltopics.model.Topic"/>

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_half"
        android:layout_marginEnd="@dimen/padding_main"
        android:layout_marginStart="@dimen/padding_main"
        android:layout_marginTop="@dimen/padding_half"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:contentPadding="@dimen/padding_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/padding_main"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="@dimen/padding_main"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:text="@{topic.name}"
                android:textAppearance="@style/TextAppearance.Title"
                tools:text="Title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/button_downvote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:onClick="@{() -> viewModel.onDownvoteClicked(topic)}"
                    android:padding="@dimen/padding_half"
                    android:src="@drawable/ic_arrow_downward"/>

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_half"
                    android:text="@{String.valueOf(topic.score)}"
                    tools:text="3"/>

                <ImageView
                    android:id="@+id/button_upvote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:onClick="@{() -> viewModel.onUpvoteClicked(topic)}"
                    android:padding="@dimen/padding_half"
                    android:src="@drawable/ic_arrow_upward"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>