...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_topic_title"
            android:textAppearance="@style/TextAppearance.Title"/>

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/padding_main"
            android:inputType="textCapSentences|textMultiLine|textAutoComplete"
            android:maxLength="255"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onDiscardTopicClicked()}"
                android:text="@string/dialog_discard"/>

            <Button
                android:id="@+id/submit_button"
                style="@style/Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onSubmitTopicClicked()}"
                android:text="@string/dialog_submit"/>

...
